--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
-.search-field {
+/* .search-field {
   border: none;
   border-radius: 50px;
   padding: 5px;
@@ -11,8 +11,8 @@ body {
 .search-field:hover {
   outline: none;
   border: none;
-}
-.search-box {
+} */
+/* .search-box {
   border: 1px solid rgb(3, 118, 211);
   width: 281px;
   border-radius: 5px;
@@ -24,6 +24,10 @@ body {
   padding: 10px 50px;
   border-radius: 25px;
   margin-left: 20px;
+} */
+.custom-margin{
+  margin-top:50px;
+  margin-bottom:50px;
 }
 #all-products {
   display: grid;
@@ -42,11 +46,17 @@ body {
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 1px solid black;
 }
 .product-image {
   width: 150px;
   height: 150px;
+}
+.fa-star{
+  font-size: 13px;
+}
+.fa-star.filled{
+  color:#E76F51;
 }
 .cart {
   width: 350px;
