--- a/css/style.css
+++ b/css/style.css
@@ -38,13 +38,18 @@ body {
   margin: auto;
   align-items: center;
   justify-content: center;
+  grid-gap: 15px 25px;
 }
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  margin-bottom: 10px;
+  height:500px;
+  box-shadow: 2px 2px 4px gainsboro;
+  border-radius: 10px;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.637);
   border-radius: 10px;
   border: 1px solid black;
 }
